address alignment issue fixed

--- a/assets/sass/style.scss
+++ b/assets/sass/style.scss
@@ -531,3 +531,33 @@ thead th {
         border: none;
     }
 }
+.tcard-form {
+    background-color: #f3f3f3;
+    padding: 0 10px;
+}
+
+.vininput-sm {
+    border:1px solid #B9D2DC;
+    border-radius: 5px;
+    select,span {
+        height: 30px;
+    }
+    span {
+        padding: 0 !important;
+        margin: 0 !important;
+        width: auto;
+        min-width: 30px;
+        border: none;
+        background: #fff;
+
+        i.icon:before{
+            color: $color-dark;
+            font-size: 18px;
+        }
+
+    }
+
+    select{
+        border: none;
+    }
+}
